--- a/pages/index/index.css
+++ b/pages/index/index.css
@@ -36,7 +36,7 @@ button {
   text-align: center;
   font-weight: 700;
   border-radius: 8px;
-  width: 180px;
+  width: 45%;
 }
 
 .btn {
@@ -69,7 +69,7 @@ button {
 }
 
 .index-bkimg {
-  background-image: url('https://cdn.pixabay.com/photo/2020/07/16/07/54/starry-sky-5410078_960_720.jpg');
+  background-image: url('../images/index.jpg');
   background-size: cover;
   height: 100vh;
 }
