--- a/pages/game/game.css
+++ b/pages/game/game.css
@@ -9,8 +9,9 @@ body {
     height: 100vh;
 }
 
-.cwf {
+#cwf {
     display: block;
     background-color: #333333;
-    width: 100%; height: 100%; 
+    width: 100%;
+    height: 100vh;
 }
