--- a/pages/game/game.css
+++ b/pages/game/game.css
@@ -1,17 +1,5 @@
-* {
-    margin: 0px;
-    padding: 0px;
-    overflow: hidden;
-}
+*     { margin: 0px;       padding: 0px;    overflow: hidden; }
 
-body {
-    width: 100vw;
-    height: 100vh;
-}
+body  { width: 100vw;      height: 100vh; }
 
-#cwf {
-    display: block;
-    background-color: #333333;
-    width: 100%;
-    height: 100vh;
-}
+#cwf  { display: block;    background-color: #333333;    width: 100%;    height: 100vh; }
